# Cardlist-manager

./: .gitignore  CMakeLists.txt  Makefile  README.md  adminmenu.cpp  adminmenu.h  card.cpp  cardList_data.txt  cardlist.cpp  cardlist.h  main
include/: card.h
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
main.exe.dSYM/Contents/Resources/Relocations/aarch64/: main.exe.yml
src/: adminmenu.cpp  main.cpp
